swagger update and public key response
